tests/NormalTests/paczka2/big_fuzzy/12134385.err
Error in line 8: A808 A678 26,1
Error in line 35: g0Spy0xtO A678 23,6
Error in line 41: g0Spy0xtO A173 74,7
Error in line 52: rn2eD A220 60,3
Error in line 53: HEVO0pYjLI A678 69,5
Error in line 59: w6B1s8nUGO A173 99,8
Error in line 65: a48lG6gPG8r A173 26,6
Error in line 50: A808 A173 110,6
Error in line 92: rn2eD A808 48,1
Error in line 115: HEVO0pYjLI A808 -2,0
Error in line 118: wZwIsHc5CMX A678 41,2
Error in line 119: wZwIsHc5CMX A220 57,2
Error in line 107: HEVO0pYjLI A808 65,6
Error in line 97: w6B1s8nUGO A808 25,9
Error in line 127: a48lG6gPG8r A808 67,8
Error in line 134: a48lG6gPG8r A173 -1,1
Error in line 138: HEVO0pYjLI A808 60,5
Error in line 128: a48lG6gPG8r A173 44,3
Error in line 150: HEVO0pYjLI A220 38,23
Error in line 153: g0Spy0xtO A220 86,1
Error in line 158: A808 A173 15,89
Error in line 155: g0Spy0xtO A173 7,7
Error in line 164: A808 A173 65,3
Error in line 174: a48lG6gPG8r A220 8,31
Error in line 175: wZwIsHc5CMX A808 21,6
Error in line 183: wZwIsHc5CMX A678 9,1
Error in line 195: g0Spy0xtO A220 63,1
Error in line 187: a48lG6gPG8r A220 302,9
Error in line 199: w6B1s8nUGO A173 86,7
Error in line 184: wZwIsHc5CMX A173 35,4
Error in line 215: HEVO0pYjLI A220 46,8
Error in line 198: rn2eD A173 125,7
Error in line 226: g0Spy0xtO A220 15,3
Error in line 234: HEVO0pYjLI A808 89,1
Error in line 223: rn2eD A808 51,3
Error in line 239: rn2eD A220 87,1
Error in line 232: g0Spy0xtO A678 53,9
